@@ -28,8 +28,7 @@
  * @modules java.compiler
  *          jdk.jdeps/com.sun.tools.javap
  * @build toolbox.JavapTask
- * @compile --enable-preview -source ${jdk.version} Patterns.java
- * @run main/othervm --enable-preview Patterns
+ * @run main Patterns
  */
 
 import java.lang.annotation.*;
