@@ -25,7 +25,7 @@
  * SealedCompilationTests
  *
  * @test
- * @bug 8246353
+ * @bug 8246353 8273257
  * @summary Negative compilation tests, and positive compilation (smoke) tests for sealed classes
  * @library /lib/combo /tools/lib
  * @modules
@@ -648,7 +648,7 @@ public class SealedCompilationTests extends CompilationTestCase {
 
         List<String> output = new JavacTask(tb)
             .outdir(out)
-            .options("--enable-preview", "-source", Integer.toString(Runtime.version().feature()), "-Xprint")
+            .options("-Xprint")
             .files(findJavaFiles(test))
             .run()
             .writeAll()
@@ -724,6 +724,18 @@ public class SealedCompilationTests extends CompilationTestCase {
                    },
                    """
                    non-sealed class C extends Undefined {}
+                   """);
+    }
+
+    public void testNonSealedErroneousSuperInterface() {
+        assertFail("compiler.err.cant.resolve",
+                   d -> {
+                       if (diags.keys().size() != 1) {
+                           fail("Unexpected errors: " + diags.toString());
+                       }
+                   },
+                   """
+                   non-sealed class C implements Undefined {}
                    """);
     }
 
@@ -1236,6 +1248,19 @@ public class SealedCompilationTests extends CompilationTestCase {
                 final class B extends A implements I { }
 
                 class Foo<X extends A & I> {}
+                """
+        );
+        assertOK(
+                """
+                class Outer {
+                    abstract class Base {}
+                    interface Marker {}
+                    sealed class B extends Base {}
+                    final class C extends B implements Marker {}
+                    private <T extends Base & Marker> void test(T obj) {
+                        B b = (B) obj;
+                    }
+                }
                 """
         );
     }
